fix branding on small screens

--- a/resources/assets/sass/_components.branding.scss
+++ b/resources/assets/sass/_components.branding.scss
@@ -3,14 +3,9 @@
    ========================================================================== */
 
 .c-branding {
-    display: table;
+    display: flex;
     color: $c-primary;
     align-items: center;
-
-    > div {
-        display: table-cell;
-        vertical-align: middle;
-    }
 }
 
     .c-branding__img {
@@ -19,9 +14,14 @@
     }
 
     .c-branding__title {
-        @include inuit-font-size(22px, false);
+        @include inuit-font-size(22px, 1.2);
 
         padding-left: $unit-small;
         white-space: nowrap;
         font-family: $font-heading;
+
+        @include mq($until: tablet) {
+            @include inuit-font-size(18px, 1.2);
+            white-space: normal;
+        }
     }
